--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,16 @@
-*.iws
-*Db.properties
-*Db.script
-.settings
-stacktrace.log
-/*.zip
-/plugin.xml
-/*.log
-/*DB.*
-/cobertura.ser
-.DS_Store
-/target/
-/target-eclipse/
-/out/
-/web-app/plugins
-/web-app/WEB-INF
-.idea
-*.iml
-.project
 .classpath
+.DS_Store
+.idea
+.settings
+.project
+*.iml
+*.iws
+*.log
+/cobertura.ser
+/doc
+/grails-distributed-mutex-*.zip
+/grails-distributed-mutex-*.zip.sha1
+/plugin.xml
+/target
+/target-eclipse
+/web-app
